--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>React PWA</title>
   <meta charset="UTF-8" />
+  <link rel="manifest" href="manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- https://web.dev/uses-rel-preconnect -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
