--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
   <meta name="theme-color" content="#ffffff">
+  
+  <!-- iOS PWA 特定配置 -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="React PWA">
+  <link rel="apple-touch-icon" href="/pwa-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="/pwa-512x512.png" sizes="512x512">
+  <link rel="apple-touch-startup-image" href="/pwa-512x512.png">
 
   <meta name="keywords" content="react, pwa, boilerplate, template" />
 
